Update skills: Remove C++, add MySQL and MS SQL Server

--- a/index.html
+++ b/index.html
@@ -411,8 +411,7 @@
                                 class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">JavaScript</span>
                             <span
                                 class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">TypeScript</span>
-                            <span
-                                class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">C++</span>
+
                         </div>
                     </div>
                     <div
@@ -471,6 +470,14 @@
                                 class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">PostgreSQL</span>
                             <span
                                 class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">MongoDB</span>
+                            <span
+                                class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">SQL</span>
+                            <span
+                                class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">MySQL
+                                Server</span>
+                            <span
+                                class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">Microsoft
+                                SQL Server</span>
                             <span
                                 class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">Git</span>
                         </div>
@@ -565,8 +572,7 @@
                                     <span
                                         class="text-[10px] font-bold uppercase tracking-wider text-primary bg-blue-50 dark:bg-blue-900/20 px-2 py-1 rounded">Desktop</span>
                                     <span
-                                        class="text-[10px] font-bold uppercase tracking-wider text-primary bg-blue-50 dark:bg-blue-900/20 px-2 py-1 rounded">C++
-                                        / Java</span>
+                                        class="text-[10px] font-bold uppercase tracking-wider text-primary bg-blue-50 dark:bg-blue-900/20 px-2 py-1 rounded">Java</span>
                                 </div>
                                 <a class="inline-flex items-center text-sm font-bold text-primary hover:underline"
                                     href="#">
