Update styling: Change cards to dark background, remove hover effects

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     Technical Skills</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                     <div
-                        class="bg-background-light dark:bg-background-card p-6 rounded-xl shadow-sm border border-gray-100 dark:border-gray-800 hover:border-primary-electric/30 transition-colors">
+                        class="bg-background-light dark:bg-background-dark p-6 rounded-xl shadow-sm border border-gray-100 dark:border-gray-800">
                         <div class="flex items-center gap-3 mb-4">
                             <span
                                 class="material-symbols-outlined text-primary dark:text-primary-electric dark:text-glow">code</span>
@@ -474,7 +474,7 @@
                                 class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">SQL</span>
                             <span
                                 class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">MySQL
-                                Server</span>
+                            </span>
                             <span
                                 class="px-3 py-1 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-300 text-sm rounded-md font-medium border border-gray-100 dark:border-gray-700">Microsoft
                                 SQL Server</span>
@@ -621,7 +621,7 @@
                             class="text-xl font-bold dark:font-display-alt text-[#111318] dark:text-white mb-6 border-l-4 border-primary dark:border-primary-electric pl-4">
                             Certifications</h2>
                         <div
-                            class="bg-background-light dark:bg-background-card p-6 rounded-xl border border-gray-100 dark:border-gray-800 flex items-start gap-4 hover:border-primary-electric/30 transition-all">
+                            class="bg-background-light dark:bg-background-dark p-6 rounded-xl shadow-sm border border-gray-100 dark:border-gray-800 flex items-start gap-4">
                             <div
                                 class="bg-blue-100 dark:bg-blue-900/30 p-3 rounded-lg text-primary dark:text-primary-electric dark:shadow-glow-sm">
                                 <span class="material-symbols-outlined">workspace_premium</span>
