--- a/index.html
+++ b/index.html
@@ -335,8 +335,7 @@
                             <span
                                 class="inline-block py-1 px-3 rounded-full bg-gray-100 dark:bg-gray-800 text-gray-600 dark:text-gray-300 text-xs font-bold mb-2">Jan
                                 2023 - Oct 2023</span>
-                            <h3 class="text-xl font-bold text-[#111318] dark:text-white">Software Engineering Intern
-                            </h3>
+                            <h3 class="text-xl font-bold text-[#111318] dark:text-white"> Software Engineer </h3>
                             <p class="text-gray-500 dark:text-gray-400 font-medium mb-1">Altados by Niji (Final-Year
                                 Project)</p>
                             <p class="text-gray-400 text-xs italic">Casablanca, Morocco</p>
@@ -366,8 +365,7 @@
                             <span
                                 class="inline-block py-1 px-3 rounded-full bg-gray-100 dark:bg-gray-800 text-gray-600 dark:text-gray-300 text-xs font-bold mb-2">Jan
                                 2022 - Dec 2022</span>
-                            <h3 class="text-xl font-bold text-[#111318] dark:text-white">Full-Stack Developer Intern
-                            </h3>
+                            <h3 class="text-xl font-bold text-[#111318] dark:text-white">Full-Stack Developer</h3>
                             <p class="text-gray-500 dark:text-gray-400 font-medium mb-1">DevinWeb</p>
                             <p class="text-gray-400 text-xs italic">Tetouan, Morocco</p>
                         </div>
