--- a/index.html
+++ b/index.html
@@ -680,11 +680,10 @@
                 </h2>
                 <div class="flex flex-col sm:flex-row justify-center gap-6 mb-10">
                     <a class="flex items-center justify-center gap-3 px-6 py-4 bg-white dark:bg-background-card border border-gray-100 dark:border-gray-800 rounded-xl hover:bg-gray-100 dark:hover:border-primary-electric/50 dark:hover:shadow-glow-sm transition-all shadow-sm group"
-                        href="mailto:fatimazohra.eljamaoui1999@gmail.com">
+                        href="mailto:eljamaoui.fatimazohra@gmail.com">
                         <span
                             class="material-symbols-outlined text-primary dark:text-primary-electric group-hover:scale-110 transition-transform dark:text-glow">mail</span>
-                        <span
-                            class="font-medium text-[#111318] dark:text-white">fatimazohra.eljamaoui1999@gmail.com</span>
+                        <span class="font-medium text-[#111318] dark:text-white">eljamaoui.fatimazohra@gmail.com</span>
                     </a>
                 </div>
                 <div class="flex justify-center gap-6 mb-8">
